# dns-syncer

./: .gitignore  Cargo.toml  LICENSE  README.md  sample_config.yaml
cmd/: config.rs  config_test.rs  main.rs
src/: error.rs  lib.rs  record.rs  types.rs
src/fetcher/: global.rs  http_fetcher.rs  mod.rs  types.rs
src/provider/: mod.rs  types.rs
src/provider/cloudflare/: cloudflare.rs  mod.rs  restful_cli.rs  serializer.rs  unit_test.rs
src/provider/cloudflare2/: restful_cli.rs
src/record/: cfg.rs  config.rs  entry.rs  http_fetcher.rs  mod.rs  public_ip.rs  record.rs  types.rs  unit_test.rs
src/wrapper/: http.rs
