[package]
name = "dns-syncer"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Douglas Su <doug.su.au@gmail.com>"]
readme = "README.md"

[[bin]]
name = "dns-syncer"
path = "cmd/main.rs"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
async-trait = { version = "0.1.73" }
