[package]
name = "dns-syncer"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Douglas Su <doug.su.au@gmail.com>"]
readme = "README.md"

[[bin]]
name = "dns-syncer"
path = "cmd/main.rs"

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
async-trait = { version = "0.1.73" }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = { version = "0.9.34" }
serde_json = { version = "1.0.140" }
clap = { version = "4.5.35", features = ["derive"] }
log = { version = "0.4.27" }
